--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "edu-predict-front",
   "version": "0.0.0",
+  "engines": {
+    "node": "20.9.0",
+    "npm": "10.1.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
