--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration local",
+    "build": "ng build --configuration=production",
+    "watch": "ng build --watch --configuration=production",
     "test": "ng test"
   },
   "private": true,
