--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "chart.js": "^4.4.0",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "path": "^0.12.7",
